@@ -1,3 +1,7 @@
+2015-11-18 Giuseppe Salamanna <salaman AT cern.ch>
+	* ttHMultileptonElectronLikelihoodDC14: updated to 
+	ElectronPhotonSelectorTools/offline/mc15_20150712
+	
 2015-11-17 David Hohn <david.hohn@cern.ch>
 	* update README with Top,2.3.33
 
